added token in swagger docs and some minor changes to code
